Fix animation on mobile

--- a/src/client/pages/home-page/styles.module.scss
+++ b/src/client/pages/home-page/styles.module.scss
@@ -11,6 +11,15 @@
   width: 100%;
   height: 100%;
   top: 0;
+
+  @media (max-width: 768px) {
+    //width: auto;
+    transform: scale(0.75);
+    height: 110vh;
+    width: 160%;
+    left: -20%;
+    //left: -50%;
+  }
 }
 
 .bgOverlay {
